--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -44,6 +44,13 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.2.0.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.j256.ormlite</groupId>
+            <artifactId>ormlite-core</artifactId>
+            <version>4.48</version>
+        </dependency>
+
     </dependencies>
 
     <build>
