--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -8,6 +8,7 @@
         <spring.version>5.2.0.RELEASE</spring.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <groupId>groupId</groupId>
