--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -64,6 +64,18 @@
             <version>8.0.18</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>3.1.0.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.2.0.RELEASE</version>
+        </dependency>
+
 
     </dependencies>
 
