--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,13 @@
         android:theme="@style/Theme.AppCompat.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
+            android:name=".BottomNavigation"
+            android:label="@string/title_activity_bottom_navigation"></activity>
+        <activity
+            android:name=".SideMenu"
+            android:label="@string/title_activity_side_menu"
+            android:theme="@style/NoActionBar" />
+        <activity
             android:name=".MainActivity"
             tools:ignore="WrongManifestParent">
             <intent-filter>
@@ -31,6 +38,6 @@
         <activity
             android:name=".RegisterActivity"
             tools:ignore="WrongManifestParent" />
-
     </application>
+
 </manifest>
