--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
-
+        <activity
+            android:name=".SideMenu"
+            android:label="@string/title_activity_side_menu"
+            android:theme="@style/NoActionBar"></activity>
         <activity
             android:name=".MainActivity"
             tools:ignore="WrongManifestParent">
@@ -32,8 +35,7 @@
         <activity
             android:name=".RegisterActivity"
             tools:ignore="WrongManifestParent" />
-        <activity
-            android:name=".DetailActivity"/>
+        <activity android:name=".DetailActivity" />
     </application>
 
 </manifest>
